<resources>
    <string name="app_name">Figuras Geometricas</string>
    <string name="triangulo">Triángulo</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="circulo">Círculo</string>
    <string name="rombo">Rombo</string>
    <string name="pentagono">Pentágono</string>
    <string name="hexagono">Hexágono</string>
    <string name="input_msg_ego2509">Please input the value of one side of the square:</string>
    <string name="tx_perim_ego2509">Solve for Perimeter</string>
    <string name="square_perim_tag">Square Perimeter</string>
    <string name="PerPen">Perímetro del pentágono de lado L</string>
    <string name="InL">Ingrese L: </string>
    <string name="Calcular">Calcular</string>
    <string name="unitcm">cm</string>
    <string name="valor1">Lado A del rombo en metros</string>
    <string name="calcular_perimetro">CALCULAR PERÍMETRO</string>
    <string name="_0m">0m</string>
    <string name="perimetro">PerimetroRombo</string>
    <string name="area_del_rombo">Area del Rombo</string>
    <string name="diagonalMayor">Ingresa el valor de la diagonal mayor</string>
    <string name="diagonalMenor">Ingrese el valor de la diagonal menor</string>
    <string name="calcular_area">Calcular Area</string>
    <string name="resultado">Resultado</string>
    <string name="arearombolabel">AreaRombo</string>
    <string name="ingrese_lado_a">Ingrese lado a</string>
    <string name="ingrese_lado_b">Ingrese lado b</string>
    <string name="calcular_perimetro">Calcular perimetro</string>
    <string name="AreaPentagono"/>
    <string name="bBotonCalcular">Calcular Area</string>
    <string name="tvPerimetroPenta">Perimetro</string>
    <string name="IngresePerimetro">Ingrese el perimetro</string>
    <string name="tvApotema">Apotema</string>
    <string name="tvApotemahint">Ingrese el Apotema</string>
    <string name="SelAreaPentagono">SelAreaPentagono</string>Ingrese area del pentagono
    <string name="tvRadioAreaCirculo">Radio</string>
    <string name="hintRadioAreaCirculo">Ingrese el radio</string>
    <string name="tvResultAreaCirculo"/>
    <string name="btCalcularAreaCirculo">Calcular</string>
    <string name="areacirculo">Area del circulo</string>
    <string name="area">Area</string>
    <string name="perimetro">Perimetro</string>
    <string name="seleccion">Selección</string>
    <string name="square_side_a">lado</string>
    <string name="asidehint">introducir lado</string>
    <string name="calculatesquarea">Calcular Area</string>
    <string name="resultareasquare">Resultado :</string>
    <string name="titlesquarearea">Area de cuadrado</string>
    <string name="atriangulo">Area Triangulo</string>
    <string name="htriangulo">Altura</string>
    <string name="btriangulo">Base</string>
    <string name="calcular">Calcular Area</string>
    <string name="areaTriangulo">AreaTriangulo</string>
    <string name="asidehint">introducir lado</string>
    <string name="square_side_a">lado</string>
    <string name="calculatesquarea">Calcular Area</string>
    <string name="resultareasquare">Resultado :</string>
    <string name="titlesquarearea">Area de cuadrado</string>
</resources>
