<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AreaRomboActivity">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tvAreaRombo"
              android:gravity="center"
              android:text="@string/area_del_rombo"
              android:textColor="@color/color_negro"
              android:textSize="30sp"/>
    <ImageView android:layout_width="wrap_content"
               android:layout_height="188dp"
               android:src="@drawable/rombo"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/etDiagonalMayor"
              android:gravity="center"
              android:inputType="number"
              android:hint="@string/diagonalMayor"/>
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/etDiagonalMenor"
              android:gravity="center"
              android:inputType="number"
              android:hint="@string/diagonalMenor"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bnCalcular"
            android:layout_gravity="center"
            android:text="@string/calcular_area"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tvResultado"
              android:gravity="center"
              android:text="@string/resultado"
              android:textColor="@color/color_negro"/>


</LinearLayout>