<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:padding="5dp">
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <Button
                android:layout_height="match_parent"
                android:id="@+id/bnTriangulo"
                android:layout_weight="1"
                android:text="@string/triangulo"
                android:onClick="onButtonClicked"
                android:textAllCaps="false"/>
        <Button
                android:layout_height="match_parent"
                android:id="@+id/bnCuadrado"
                android:layout_weight="1"
                android:text="@string/cuadrado"
                android:onClick="onButtonClicked"
                android:textAllCaps="false"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">>
        <Button
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/bnRectangulo"
                android:text="@string/rectangulo"
                android:onClick="onButtonClicked"
                android:textAllCaps="false"/>
        <Button
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/bnCirculo"
                android:text="@string/circulo"
                android:onClick="onButtonClicked"
                android:textAllCaps="false"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">>
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bnRombo"
                android:layout_weight="1"
                android:text="@string/rombo"
                android:onClick="onButtonClicked"
                android:textAllCaps="false"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bnPentagono"
                android:layout_weight="1"
                android:text="@string/pentagono"
                android:onClick="onButtonClicked"
                android:textAllCaps="false"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">>
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bnHexagono"
                android:layout_weight="1"
                android:text="@string/hexagono"
                android:onClick="onButtonClicked"
                android:textAllCaps="false"/>
    </TableRow>
</TableLayout>