<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Pentagono_AreaActivity">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

            <TextView
                    android:text="@string/tvPerimetroPenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="252dp"
                    android:layout_weight="1"
                    tools:layout_editor_absoluteX="308dp" android:id="@+id/tvPerimetroPenta"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:ems="10"
                    android:hint="@string/IngresePerimetro"
                    tools:layout_editor_absoluteY="159dp" tools:layout_editor_absoluteX="36dp"
                    android:id="@+id/etPerimetroPent"/>


        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView
                android:text="@string/tvApotema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="177dp"
                android:layout_weight="1"
                    tools:layout_editor_absoluteX="300dp" android:id="@+id/tvApotemaPenta"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"

                    android:ems="10"
                    android:hint="@string/tvApotemahint"
                    tools:layout_editor_absoluteY="225dp" tools:layout_editor_absoluteX="52dp"
                    android:id="@+id/etApotemaPent"/>
        </LinearLayout>

            <Button
                    android:text="@string/bBotonCalcular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="363dp"
                    android:onClick="CalculoAreaPentagono"

                    tools:layout_editor_absoluteX="119dp" android:id="@+id/CalcularAreaPentagono"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tvResultadoAreaPent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>