<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PerimetroPentegonoActivity">

    <TextView
            android:layout_width="318dp"
            android:layout_height="52dp"
            android:id="@+id/textView"
            android:textSize="20dp"
            android:text="@string/PerPen"
            android:fontFamily="@string/pentagono"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458" android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="152dp"
            android:layout_height="38dp"
            android:id="@+id/textView2"
            android:textSize="20dp"
            android:textAlignment="center"
            android:text="@string/InL"
            android:fontFamily="@string/pentagono"
            app:layout_constraintTop_toTopOf="@+id/etLado" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView"/>

    <EditText
            android:layout_width="154dp"
            android:layout_height="39dp"
            android:id="@+id/etLado"
            android:inputType="numberDecimal"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
            android:layout_marginEnd="8dp"/>

    <Button
            android:layout_width="317dp"
            android:layout_height="51dp"
            android:id="@+id/bnCalcular"
            android:text="@string/Calcular"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/etLado" app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/etLado"
            app:layout_constraintHorizontal_bias="0.652"/>
    <TextView
            android:layout_width="109dp"
            android:layout_height="29dp"
            android:id="@+id/txPerimetro"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toStartOf="@+id/units"
            android:layout_marginEnd="8dp"/>

    <TextView
            android:layout_width="59dp"
            android:layout_height="28dp"
            android:id="@+id/units"
            android:text="@string/unitcm"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/etLado"
            android:layout_marginEnd="88dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/etLado"/>

</androidx.constraintlayout.widget.ConstraintLayout>