<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AreaTrianguloActivity"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
>


    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/title"
              android:textSize="50sp"
              android:text="@string/atriangulo"
              android:padding="20dp"
    />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
    >

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/btriangulo"
                  android:textSize="20sp"
                  android:text="@string/btriangulo"
                  android:gravity="center"
        />

        <EditText android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/etbtriangulo"
                  android:textSize="20sp"

        />

    </LinearLayout>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
    >

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/htriangulo"
                  android:textSize="20sp"
                  android:text="@string/htriangulo"
                  android:gravity="center"
        />

        <EditText android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/ethtriangulo"
                  android:textSize="20sp"

        />

    </LinearLayout>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bnCalcular"
            android:text="@string/calcular"
            android:textSize="20dp"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tvarea"
              android:text=""
              android:textSize="15dp"
              android:padding="30dp"
              android:gravity="center"
    />

</LinearLayout>