<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".areCirculoActivity">

    <TextView
            android:text="@string/tvRadioAreaCirculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRadioCirculoArea" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.122" app:layout_constraintVertical_bias="0.125"
            android:textSize="24sp"/>
    <EditText
            android:layout_width="224dp"
            android:layout_height="54dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edRadioCircuiloArea"
            app:layout_constraintStart_toEndOf="@+id/tvRadioCirculoArea" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintVertical_bias="0.098" android:textSize="24sp"
            android:hint="@string/hintRadioAreaCirculo"/>
    <Button
            android:text="@string/btCalcularAreaCirculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bnCalcularAreaCirculo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edRadioCircuiloArea" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.088"
            android:onClick="onButtonClicked"/>
    <TextView
            android:text="@string/tvResultAreaCirculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvResultAreaCirculo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/bnCalcularAreaCirculo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintVertical_bias="0.115" android:textSize="30sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>