<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SquareAreaActivity" android:background="#00F7F4F4" android:padding="5dp">

    <ImageView android:layout_width="216dp" android:layout_height="233dp"
               android:background="@drawable/square"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
               android:id="@+id/imageView"
               android:layout_marginTop="8dp"
               app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.497"
               android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintVertical_bias="0.141"/>
    <TextView
            android:text="@string/square_side_a"
            android:layout_width="51dp"
            android:layout_height="40dp"
            android:id="@+id/tv_aside" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.194"
            android:fontFamily="sans-serif-black" android:textColor="#000000"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:textSize="20sp"
            app:layout_constraintVertical_bias="0.066" android:textAlignment="center"/>
    <TextView
            android:text="@string/resultareasquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_resultshow" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.219"
            android:fontFamily="sans-serif-black" android:textColor="#000000"
            android:layout_marginTop="208dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:textSize="20sp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_resultshowresult" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.377"
            android:fontFamily="sans-serif-black" android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@+id/tv_resultshow"
            app:layout_constraintBottom_toBottomOf="@+id/tv_resultshow"
            app:layout_constraintStart_toEndOf="@+id/tv_resultshow" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etsidea"
            app:layout_constraintStart_toEndOf="@+id/tv_aside" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/tv_aside"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            android:hint="@string/asidehint"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintTop_toTopOf="@+id/tv_aside"/>
    <Button
            android:text="@string/calculatesqarea"
            android:layout_width="130dp"
            android:layout_height="42dp"
            android:id="@+id/bncalcarea" android:layout_marginTop="92dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.06"
            android:fontFamily="sans-serif-black" android:background="#E2998282"
            android:onClick="onButtonClicked"/>

</androidx.constraintlayout.widget.ConstraintLayout>
